# promptqc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SETUP_CHECKLIST.md  PYPI_PUBLISH_GUIDE.md  README.md  RELEASE_NOTES_v0.2.0.md  SECURITY.md  pyproject.toml
src/promptqc/: __init__.py  analyzer.py  cli.py  config.py  models.py  parser.py
src/promptqc/rules/: __init__.py  base.py  llm_judge.py  patterns.py  semantic.py  structure.py  tokens.py  variables.py
test_prompts/: bad_prompt.txt  good_prompt.txt
test_suite/: README.md  RUN_TESTS.md  TEST_OBSERVATIONS.md  run_accuracy_test.py  run_groq_test.py  run_test_minimax.py  run_test_qwen.py
test_suite/bad_prompts/: 01_contradictions.txt  02_security_issues.txt  03_vague_incomplete.txt  04_token_inefficient.txt  05_confused_bot.txt  06_script_runner_injection.txt
test_suite/edge_cases/: 03_only_special_chars.txt  04_extremely_long.txt  05_mixed_languages.txt  06_code_injection_attempt.txt
test_suite/examples/: test_bad_system_prompt.txt  test_system_prompt.txt
test_suite/good_prompts/: 01_customer_service.txt  02_code_reviewer.txt  03_data_scientist.txt  04_markdown_formatter.txt  05_devops_engineer.txt
tests/: test_promptqc.py  test_sandboxing.py
