[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptqc"
version = "0.1.0"
description = "Quality assessment and improvement suggestions for LLM system prompts"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Lakshmi", email = "lakshmi@example.com"}
]
keywords = [
    "prompt", "LLM", "quality", "linter", "optimization",
    "AI", "GPT", "system-prompt", "token", "analysis"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.20.0",
    "tiktoken>=0.5.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
promptqc = "promptqc.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/promptqc"
Documentation = "https://github.com/yourusername/promptqc#readme"
Repository = "https://github.com/yourusername/promptqc"
Issues = "https://github.com/yourusername/promptqc/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
